--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -466,11 +466,11 @@ body.hasHover #filters .filter-buttons.locations .col.staten-island:hover {
     width: 100%;
   }
 
-  .all-campaigns-body .campaign-list-container .campaign-list .row-item.list-row-item .card .campaign .list-group-flush .list-group-item.description-list-item .grid-view {
-    display: none;
+  .all-campaigns-body .campaign-list-container .campaign-list .row-item.list-row-item .card .campaign .list-group-flush .list-group-item.description-list-item .campaign-description.grid-view {
+    display: none !important;
   }
 
-  .all-campaigns-body .campaign-list-container .campaign-list .row-item.list-row-item .card .campaign .list-group-flush .list-group-item.description-list-item .list-view {
+  .all-campaigns-body .campaign-list-container .campaign-list .row-item.list-row-item .card .campaign .list-group-flush .list-group-item.description-list-item .campaign-description.list-view {
     display: block;
   }
 
