--- a/app/views/application/_results.html.haml
+++ b/app/views/application/_results.html.haml
@@ -32,7 +32,7 @@
     - if campaigns.count == 0
       %p.start-campaign{'aria-hidden' => 'true'}
         That's okay!
-        %a.new-campaign{href: 'https://campaigns.transalt.org/new', target: '_blank'}
+        %a.new-campaign{href: 'https://campaigns.transalt.org/new', target: '_blank', rel: 'noopener noreferrer'}
           Start your own campaign!
       %span.sr-only
         That's okay! Start your own campaign!
