--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -9,19 +9,19 @@
           %p
             © Brian Howald 2017
           %div.social-media-links
-            %a.social-media-link.twitter{'href' => 'https://twitter.com/bdhowald', 'target' => '_blank'}
+            %a.social-media-link.twitter{'href' => 'https://twitter.com/bdhowald', 'target' => '_blank', rel: 'noopener noreferrer'}
               %i.fa.fa-2x.fa-twitter
               %span.sr-only
                 Twitter Account of Brian Howald
-            %a.social-media-link.github{'href' => 'https://github.com/bdhowald', 'target' => '_blank'}
+            %a.social-media-link.github{'href' => 'https://github.com/bdhowald', 'target' => '_blank', rel: 'noopener noreferrer'}
               %i.fa.fa-2x.fa-github
               %span.sr-only
                 Github Account of Brian Howald
-            %a.social-media-link.linkedin{'href' => 'https://linkedin.com/in/bdhowald', 'target' => '_blank'}
+            %a.social-media-link.linkedin{'href' => 'https://linkedin.com/in/bdhowald', 'target' => '_blank', rel: 'noopener noreferrer'}
               %i.fa.fa-2x.fa-linkedin
               %span.sr-only
                 LinkedIn Account of Brian Howald
-            %a.social-media-link.instagram{'href' => 'https://instagram.com/bdhowald', 'target' => '_blank'}
+            %a.social-media-link.instagram{'href' => 'https://instagram.com/bdhowald', 'target' => '_blank', rel: 'noopener noreferrer'}
               %i.fa.fa-2x.fa-instagram
               %span.sr-only
                 Instagram Account of Brian Howald
