--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,12 +13,14 @@
 
  @import 'acknowledgments';
  @import 'bootstrap';
+ @import 'campaign-description';
  @import 'font-awesome-sprockets';
  @import 'font-awesome';
  @import 'footer';
  @import 'index';
  @import 'material-design-iconic-font.min';
  @import 'privacy';
+ @import 'region';
  @import 'review';
  @import 'site-header';
  @import 'thank_you';
