--- a/app/views/application/privacy.html.haml
+++ b/app/views/application/privacy.html.haml
@@ -20,4 +20,4 @@
               If you don't want this data stored at all, just clear your cookies.
 
 
-  = render partial: 'layouts/footer'
+  / = render partial: 'layouts/footer'
