--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,7 +1,7 @@
 - have_selected_campaigns = have_selected_campaigns || false
 
 
-%div{'class' => "static-footer #{'with-padding' if have_selected_campaigns}"  }
+%div#static-footer{class: "#{'with-padding' if have_selected_campaigns}"  }
   %div.container
     %div.row
       %div.col-lg-12
