Minor style adjustments to margins and padding.

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -374,6 +374,7 @@ body.hasHover #filters .filter-buttons.locations .col.staten-island:hover {
 }
 
 .view-style-controls .btn {
+  margin-bottom: 0rem;
   width: 50%
 }
 
@@ -406,7 +407,7 @@ body.hasHover #filters .filter-buttons.locations .col.staten-island:hover {
 }
 
 .all-campaigns-body #campaign-list-container .campaign-list {
-  margin: 1rem 0 0;
+  margin: 2rem 0 0;
   padding: 0 0 1rem;
 }
 
