--- a/app/assets/stylesheets/region.scss
+++ b/app/assets/stylesheets/region.scss
@@ -1,16 +1,16 @@
 h1.region-name {
   background-color: #f3f2f1;
   margin: 0;
-  padding: 0.5rem;
+  padding: 1rem 0.5rem;
   text-align: center;
 }
 
 #home-page-header {
-  background-color: #f3f2f1;
+  // background-color: #f3f2f1;
 }
 
 #home-page-header .container {
-  background-color: #f3f2f1;
+  // background-color: #f3f2f1;
   margin-top: 0rem;
   margin-bottom: 0rem;
   padding-top: 1rem;
