Some assets changes to body margins.

--- a/app/assets/stylesheets/acknowledgments.scss
+++ b/app/assets/stylesheets/acknowledgments.scss
@@ -1,3 +1,8 @@
+.acknowledgments-page-container {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .acknowledgments-page-body h3 {
   margin: 0 0 2rem;
   text-align: center;
